src/objects/Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Service_Subdivision__c</fullName>
        <label>Service Subdivision / Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Supply_Phase__c</fullName>
        <label>Service Supply Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Phase (1Ø), Two (2)-Wire</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Network</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Three (3)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Three (3)-Wire</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye/Delta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Supply_Type__c</fullName>
        <label>Service Supply Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal with meter</fullName>
                </value>
                <value>
                    <fullName>Streetlight with meter</fullName>
                </value>
                <value>
                    <fullName>Normal without meter</fullName>
                </value>
                <value>
                    <fullName>Temporary with meter</fullName>
                </value>
                <value>
                    <fullName>Streetlight without meter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Supply_Voltage__c</fullName>
        <label>Service Supply Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>69/39 kV</fullName>
                </value>
                <value>
                    <fullName>115/66 kV</fullName>
                </value>
                <value>
                    <fullName>6.24/3.60 kV</fullName>
                </value>
                <value>
                    <fullName>13.2/7.62 kV</fullName>
                </value>
                <value>
                    <fullName>13.8/7.97 kV</fullName>
                </value>
                <value>
                    <fullName>34.5/19.92 kV</fullName>
                </value>
                <value>
                    <fullName>216 V</fullName>
                </value>
                <value>
                    <fullName>230 V</fullName>
                </value>
                <value>
                    <fullName>460/265 V</fullName>
                </value>
                <value>
                    <fullName>400/230 V</fullName>
                </value>
                <value>
                    <fullName>4.8 kV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Supply__c</fullName>
        <label>Service Supply #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Unit_No__c</fullName>
        <label>Unit #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Wire_Length__c</fullName>
        <label>Service Wire Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Wire_Material__c</fullName>
        <label>Service Wire Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Wire_Maximum_Capacity__c</fullName>
        <label>Service Wire Maximum Capacity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Wire_Phase__c</fullName>
        <label>Service Wire Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Phase (1Ø), Two (2)-Wire</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Network</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Three (3)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Three (3)-Wire</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Delta)</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye/Delta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Wire_Pole_Number__c</fullName>
        <label>Service Wire Pole Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Wire_Size__c</fullName>
        <label>Service Wire Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>#1/0</fullName>
                </value>
                <value>
                    <fullName>#2</fullName>
                </value>
                <value>
                    <fullName>#3/0</fullName>
                </value>
                <value>
                    <fullName>#4</fullName>
                </value>
                <value>
                    <fullName>#4/0</fullName>
                </value>
                <value>
                    <fullName>#6</fullName>
                </value>
                <value>
                    <fullName>#8</fullName>
                </value>
                <value>
                    <fullName>1000 MCM</fullName>
                </value>
                <value>
                    <fullName>500 MCM</fullName>
                </value>
                <value>
                    <fullName>500 MCM &amp; #4/0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Wire_TLN__c</fullName>
        <description>Service transformer location number</description>
        <label>Service Wire TLN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Wire_Type__c</fullName>
        <label>Service Wire Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerial Alum.,Bundled</fullName>
                </value>
                <value>
                    <fullName>Aerial Alum.,Open</fullName>
                </value>
                <value>
                    <fullName>Aerial CU.,Bundled</fullName>
                </value>
                <value>
                    <fullName>Aerial Coppen,Open</fullName>
                </value>
                <value>
                    <fullName>Under Alum.,Lateral</fullName>
                </value>
                <value>
                    <fullName>Under Copper,Lateral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Wire_Voltage__c</fullName>
        <label>Service Wire Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>69/39 kV</fullName>
                </value>
                <value>
                    <fullName>115/66 kV</fullName>
                </value>
                <value>
                    <fullName>6.24/3.60 kV</fullName>
                </value>
                <value>
                    <fullName>13.2/7.62 kV</fullName>
                </value>
                <value>
                    <fullName>13.8/7.97 kV</fullName>
                </value>
                <value>
                    <fullName>34.5/19.92 kV</fullName>
                </value>
                <value>
                    <fullName>216 V</fullName>
                </value>
                <value>
                    <fullName>230 V</fullName>
                </value>
                <value>
                    <fullName>460/265 V</fullName>
                </value>
                <value>
                    <fullName>400/230 V</fullName>
                </value>
                <value>
                    <fullName>4.8 kV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>V10_Account_No__c</fullName>
        <label>V10 Account #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V10_Business_Unit__c</fullName>
        <label>V10 Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V10_Payor_Account__c</fullName>
        <label>V10 Payor Account #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V10_Payor_Name__c</fullName>
        <formula>IF(Payor__r.Account.IsPersonAccount, Payor__r.Account.PersonContact.FirstName 
&amp; IF(NOT(ISBLANK(Payor__r.Account.PersonContact.MiddleName)),&apos; &apos; &amp; Payor__r.Account.PersonContact.MiddleName,&apos;&apos;) 
&amp; IF(NOT(ISBLANK(Payor__r.Account.PersonContact.LastName)),&apos; &apos; &amp; Payor__r.Account.PersonContact.LastName,&apos;&apos;) ,Payor__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>V10 Payor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voltage_Level__c</fullName>
        <label>Voltage Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Type B - 69kV</fullName>
                </value>
                <value>
                    <fullName>Type A - 115kV</fullName>
                </value>
                <value>
                    <fullName>Type E - below 13.2kV</fullName>
                </value>
                <value>
                    <fullName>Type D - 13.8/13.2kV</fullName>
                </value>
                <value>
                    <fullName>Type C - 34.5kV</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contract__c</columns>
        <columns>Segment__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>GMB</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment__c</field>
            <operation>equals</operation>
            <value>Home and Micro Business</value>
        </filters>
        <filters>
            <field>Rate__c</field>
            <operation>equals</operation>
            <value>Residential Service (RS)</value>
        </filters>
        <filters>
            <field>Service_Status__c</field>
            <operation>equals</operation>
            <value>Active - Disconnected</value>
        </filters>
        <label>GMB</label>
    </listViews>
    <nameField>
        <displayFormat>SERV-{00000000}</displayFormat>
        <label>Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CXE_Service_Rate_Type_GHMSCI</fullName>
        <active>true</active>
        <description>User shall not be allowed to set Service Rate Type to &apos;GHMSCI&apos; if:
- Service Supply Type is equal to &apos;Streetlight without meter&apos; or
- PSIC Code is equal to 1</description>
        <errorConditionFormula>AND(
ISPICKVAL(Rate__c, &apos;Government Hospitals, Metered Streetlights &amp; Charitable Institutions (GHMSCI)&apos;), 

(Case__r.RecordType.Name = &apos;New Service Application&apos;),

OR(
ISPICKVAL(Service_Supply_Type__c, &quot;Streetlight without meter&quot;),  
PSIC__r.PSIC_Code__c = &apos;1&apos;)
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>Service Rate &quot;Government Hospitals, Metered Streetlights &amp; Charitable Insitutions (GHMSCI)&quot; is only applicable if Service Supply Type is not Streetlight without meter and PSIC is non-residential.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Service_Rate_Type_General_Power</fullName>
        <active>true</active>
        <description>User shall not be allowed to set Service Rate Type to &apos;General Power&apos; if:
- Service Supply Type is equal to &apos;Streetlight without meter&apos; 
- PSIC Code is equal to 1
- Contracted Capacity is less than 40.00kW</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate__c, &apos;General Power (GP)&apos;),

(Case__r.RecordType.Name = &apos;New Service Application&apos;), 

OR(
PSIC__r.PSIC_Code__c = &apos;1&apos;,
ISPICKVAL(Service_Supply_Type__c,&apos;Streetlight without meter&apos;),
Applied_Load__c  *  PSIC__r.Demand_Factor__c &lt; 40
)
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>Service Rate &quot;General Power (GP)&quot; is only applicable if Service Supply Type is not Streetlight without meter, PSIC is non-residential, and Contracted Capacity &gt;= 40.00kW.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Service_Rate_Type_General_Service_A</fullName>
        <active>true</active>
        <description>User shall not be allowed to set Service Rate Type to &apos;General Service A&apos; if: 
- PSIC Code is equal to 1 
- Contracted Capacity is greater than 5.00kW</description>
        <errorConditionFormula>AND(ISPICKVAL(Rate__c, &apos;General Service A (GSA)&apos;),

(Case__r.RecordType.Name = &apos;New Service Application&apos;), 

OR(
Applied_Load__c *  PSIC__r.Demand_Factor__c &gt;= 5,
PSIC__r.PSIC_Code__c = &apos;1&apos;,
ISPICKVAL(Service_Supply_Type__c,&apos;Streetlight without meter&apos;)
)
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>Service Rate &quot;General Service A (GSA)&quot; is only applicable if Service Supply Type is not Streetlight without meter, PSIC is non-residential, and Contracted Capacity &lt; 5.00kW.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Service_Rate_Type_General_Service_B</fullName>
        <active>true</active>
        <description>User shall not be allowed to set Service Rate Type to &apos;General Service B&apos; if:
- Service Supply Type is equal to &apos;Streetlight without meter&apos; 
- PSIC Code is equal to 1
- Contracted Capacity is less than or equal to 5.00kW</description>
        <errorConditionFormula>AND( ISPICKVAL(Rate__c, &apos;General Service B (GSB)&apos;),

(Case__r.RecordType.Name = &apos;New Service Application&apos;), 

OR(
AND ( 
Applied_Load__c * PSIC__r.Demand_Factor__c &lt; 5, 
Applied_Load__c * PSIC__r.Demand_Factor__c &gt;= 40), 
PSIC__r.PSIC_Code__c = &apos;1&apos;,
ISPICKVAL(Service_Supply_Type__c,&apos;Streetlight without meter&apos;)
)
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>Service Rate &quot;General Service B (GSB)&quot; is only applicable if Service Supply Type is not Streetlight without meter, PSIC is non-residential, and Contracted Capacity between 5.00kW - 40.00kW</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Service_Rate_Type_Resi_Service</fullName>
        <active>true</active>
        <description>User shall not be allowed to set Service Rate Type to &apos;General Power&apos; if:
- Service Supply Type is equal to &apos;Streetlight without meter&apos; 
- PSIC Code is equal to 1</description>
        <errorConditionFormula>AND(
ISPICKVAL(Rate__c, &quot;Residential Service (RS)&quot;),

(Case__r.RecordType.Name = &apos;New Service Application&apos;), 

OR(ISPICKVAL(Service_Supply_Type__c, &quot;Streetlight without meter&quot;),
(VALUE(PSIC__r.PSIC_Code__c) &lt;&gt; 1)
)
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>Service Rate &quot;Residential Service (RS)&quot; is only applicable if Service Supply Type is not Streetlight without meter and PSIC is residential.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_TLN</fullName>
        <active>true</active>
        <description>Service Wire TLN only accepts numeric values.</description>
        <errorConditionFormula>AND( 
OR(ISCHANGED( Service_Wire_TLN__c ), ISNEW()), 
NOT(REGEX( Service_Wire_TLN__c ,&quot;[0-9]*$&quot;))

,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorMessage>Service Wire TLN only accepts numeric values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Contract_Address</fullName>
        <active>false</active>
        <description>Check if related Contract has an address</description>
        <errorConditionFormula>OR(ISBLANK(Contract__r.Billing_Preference__c), ISNULL(Contract__r.Billing_Preference__c))</errorConditionFormula>
        <errorMessage>Related Contract must have an address.</errorMessage>
    </validationRules>
</CustomObject>